# Afterglow

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.bat  vcpkg.json
.github/workflows/: build.yml
assets/: app.manifest
docs/: ARCHITECTURE.md  BUILD.md  CURRENT_STATUS.md  FINAL_SUMMARY.md  ITERATION_4_SUMMARY.md  ITERATION_SUMMARY.md  WinUI3_Migration_Guide.md
include/animation/: AnimationEngine.hpp  SpringAnimation.hpp
include/core/: Application.hpp  CacheManager.hpp  ImageDecoder.hpp  ImagePipeline.hpp  MemoryManager.hpp  ThreadPool.hpp
include/image_processing/: BatchProcessor.hpp  ColorCorrection.hpp  FilterPipeline.hpp  RAWDecoder.hpp  SharpenEngine.hpp
include/rendering/: D3D12Renderer.hpp  Direct2DRenderer.hpp
include/ui/: CommandPalette.hpp  GalleryView.hpp  GestureHandler.hpp  ImageViewer.hpp  MainWindow.hpp  MetadataPanel.hpp  Theme.hpp  ThumbnailStrip.hpp  TransitionController.hpp  ViewManager.hpp
include/utils/: ConfigManager.hpp  Logger.hpp  PerformanceMonitor.hpp
src/: main.cpp
src/animation/: AnimationEngine.cpp  SpringAnimation.cpp
src/core/: Application.cpp  CacheManager.cpp  ImageDecoder.cpp  ImagePipeline.cpp  MemoryManager.cpp  ThreadPool.cpp
src/image_processing/: FilterPipeline.cpp  SharpenEngine.cpp
src/rendering/: Direct2DRenderer.cpp  Viewport.cpp
src/ui/: CommandPalette.cpp  GalleryView.cpp  (+7 more)
winui/UltraImageViewer.WinUI/UltraImageViewer.WinUI/: App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  app.manifest  pch.h
(+22 files in other folders)
